<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Universidad</string>
    <string name="action_settings">Settings</string>
    <string name="seleccion">Selección de Recinto</string>
    <string name="recinto1">Recinto Santiago</string>
    <string name="recinto2">Recinto Santo Domingo</string>
    <string name="estudiante">Estudiantes</string>
    <string name="docente">Docentes</string>
    <string name="contrasena">Contraseña</string>
    <string name="matricula">Matrícula</string>
    <string name="iniciar">Iniciar</string>
    <string name="cancelar">Cancelar</string>
    <string name="inicio_sesion">Inicio de Sesión</string>
    <string name="codigo">Código</string>
    <string name="no_internet">Requiere Conexión a Internet</string>
    <string name="carrera">Carrera</string>
</resources>
